--- a/pages/index.css
+++ b/pages/index.css
@@ -107,7 +107,6 @@
 .recipes__title {
   max-width: 580px;
   margin: 0 0 24px;
-  font-family: "Inter", Arial, sans-serif;
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
@@ -131,8 +130,86 @@
 .recipes__video-caption {
   display: flex;
   justify-content: space-between;
-  font-family: "Inter", Arial, sans-serif;
   font-weight: 500;
   font-size: 20px;
   line-height: 30px;
+}
+
+.reservation {
+  padding: 100px 0 120px;
+  background-color: #d9e7ff;
+  background-image: url(../images/background_reservation.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #000;
+}
+
+.reservation__title {
+  margin: 0 0 80px;
+  text-align: center;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+}
+
+.reservation__form {
+  margin: 0 auto;
+}
+
+.form {
+  max-width: 385px;
+}
+
+.form__input {
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 15px 20px;
+  margin: 8px 0 32px;
+  border: 1px solid #838383;
+  border-radius: 4px;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.form__label {
+  font-style: normal;
+  font-weight: 500;
+}
+
+.form__feildset {
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
+.form__button {
+  padding: 20px 0;
+  margin-bottom: 32px;
+  width: 100%;
+  border: none;
+  border-radius: 4px;
+  background-color: #1878dc;
+  transition: background-color ease 0.3s #3f96f3;
+  color: #fff;
+  font-weight: 500;
+}
+
+.form__button:hover {
+  background-color: #3f96f3;
+}
+
+.form__checkbox {
+  border-radius: 2px;
+  width: 20px;
+  height: 20px;
+  font-weight: 500;
+}
+
+.form__label_type_checkbox {
+  display: flex;
+  gap: 12px;
+  justify-content: center;
 }
