--- a/pages/index.css
+++ b/pages/index.css
@@ -192,13 +192,13 @@
   border: none;
   border-radius: 4px;
   background-color: #1878dc;
-  transition: background-color ease 0.3s #3f96f3;
   color: #fff;
   font-weight: 500;
 }
 
 .form__button:hover {
   background-color: #3f96f3;
+  transition: background-color ease 0.3s;
 }
 
 .form__checkbox {
