--- a/pages/index.css
+++ b/pages/index.css
@@ -1,215 +1,11 @@
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: 0 auto;
-  font-family: "Inter", Arial, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.header {
-  height: 800px;
-  padding: 30px 80px 40px;
-  background-color: #fff;
-  background-image: url(../images/background_header.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-}
-
-.header__title {
-  margin: 183px 0 0;
-  max-width: 729px;
-  font-weight: 500;
-  font-size: 60px;
-  line-height: 72px;
-  letter-spacing: -0.6px;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.header__span-accent {
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-style: italic;
-  font-size: 60px;
-  line-height: 72px;
-  color: #3f96f3;
-}
-
-.header__description {
-  margin: 28px 0 0;
-  max-width: 683px;
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.header__image {
-  position: absolute;
-  width: 646px;
-  height: 568px;
-  top: 124px;
-  right: 5px;
-}
-
-.header__footer {
-  margin-top: auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  font-weight: 500;
-  color: #6f6f6f;
-}
-
-.header__paragraph {
-  margin: 0;
-  font-weight: 500;
-  color: #6f6f6f;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-}
-
-.nav__logo {
-  width: 105px;
-  height: 39px;
-  left: -50px;
-  position: relative;
-}
-
-.nav__links {
-  display: flex;
-  list-style-type: none;
-  column-gap: 20px;
-  margin: 0;
-  padding: 0;
-}
-
-.nav__link {
-  color: #000;
-  font-weight: 500;
-  text-decoration: none;
-}
-
-.recipes {
-  color: #fff;
-  background-color: #0a2750;
-  background-image: url(../images/background_recipes.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding: 100px 80px 215px;
-}
-
-.recipes__title {
-  max-width: 580px;
-  margin: 0 0 24px;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.recipes__subtitle {
-  max-width: 438px;
-  margin: 0 0 80px;
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.recipes__videos {
-  display: flex;
-  justify-content: center;
-  gap: 40px;
-  list-style-type: none;
-}
-
-.recipes__video-caption {
-  display: flex;
-  justify-content: space-between;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.reservation {
-  padding: 100px 0 120px;
-  background-color: #d9e7ff;
-  background-image: url(../images/background_reservation.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  color: #000;
-}
-
-.reservation__title {
-  margin: 0 0 80px;
-  text-align: center;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.reservation__form {
-  margin: 0 auto;
-}
-
-.form {
-  max-width: 385px;
-}
-
-.form__input {
-  display: block;
-  width: 100%;
-  box-sizing: border-box;
-  padding: 15px 20px;
-  margin: 8px 0 32px;
-  border: 1px solid #838383;
-  border-radius: 4px;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.form__label {
-  font-style: normal;
-  font-weight: 500;
-}
-
-.form__feildset {
-  margin: 0;
-  padding: 0;
-  border: none;
-}
-
-.form__button {
-  padding: 20px 0;
-  margin-bottom: 32px;
-  width: 100%;
-  border: none;
-  border-radius: 4px;
-  background-color: #1878dc;
-  color: #fff;
-  font-weight: 500;
-}
-
-.form__button:hover {
-  background-color: #3f96f3;
-  transition: background-color ease 0.3s;
-}
-
-.form__checkbox {
-  border-radius: 2px;
-  width: 20px;
-  height: 20px;
-  font-weight: 500;
-}
-
-.form__label_type_checkbox {
-  display: flex;
-  gap: 12px;
-  justify-content: center;
-}
+@import url(../vendor/normalize.css);
+@import url(../blocks/pages.css);
+@import url(../blocks/header.css);
+@import url(../blocks/nav.css);
+@import url(../blocks/recipes.css);
+@import url(../blocks/reservation.css);
+@import url(../blocks/form.css);
+@import url(../blocks/menu.css);
+@import url(../blocks/card.css);
+@import url(../blocks/about.css);
+@import url(../blocks/footer.css);
