--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -20,8 +20,9 @@
 }
 
 .footer__social-heading {
-  margin-bottom: 0 0 20px;
+  margin: 0 0 20px;
   font-weight: bold;
+  font-size: 16px;
 }
 
 .footer__list {
@@ -53,5 +54,5 @@
 }
 
 .footer__copyright {
-  margin: 108 0 0;
+  margin: 108px 0 0;
 }
