--- a/blocks/header.css
+++ b/blocks/header.css
@@ -5,9 +5,12 @@
   background-image: url(../images/background_header.svg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   position: relative;
   display: flex;
   flex-direction: column;
+  z-index: 1;
+  box-sizing: border-box;
 }
 
 .header__title {
@@ -24,6 +27,7 @@
 .header__span-accent {
   font-family: "Noto Serif", "Times New Roman", serif;
   font-style: italic;
+  font-weight: 400;
   font-size: 60px;
   line-height: 72px;
   color: #3f96f3;
@@ -43,6 +47,7 @@
   height: 568px;
   top: 124px;
   right: 5px;
+  z-index: -1;
 }
 
 .header__footer {
