--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -3,6 +3,7 @@
   background-color: #d9e7ff;
   background-image: url(../images/background_reservation.svg);
   background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
   color: #000;
 }
