--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -35,8 +35,8 @@
 
 .recipes__iframe {
   border: none;
-  width: 560px;
-  height: 315px;
+  width: 480px;
+  height: 273px;
 }
 
 .recipes__video-caption {
@@ -45,5 +45,5 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 30px;
-  margin: 0;
+  margin: 24px 0;
 }
